--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#101010</color>
     <color name="primaryDark">#292929</color>
+    <color name="for_list">#171717</color>
 </resources>
