--- a/app/src/main/res/layout/list_item_ride.xml
+++ b/app/src/main/res/layout/list_item_ride.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#292929"
+    android:background="@color/primaryDark"
     >
 
     <androidx.cardview.widget.CardView
@@ -19,7 +19,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#171717">
+            android:background="@color/for_list">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvImage"
@@ -59,7 +59,7 @@
                     android:id="@+id/tvCityName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/black"
+                    android:background="@color/primary"
                     android:fontFamily="@font/inter"
                     android:gravity="center"
                     android:paddingLeft="10dp"
@@ -90,7 +90,7 @@
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
                     android:fontFamily="@font/inter"
-                    android:background="@color/black"
+                    android:background="@color/primary"
                     android:gravity="center"
                     android:text="@string/state_name"
                     android:textColor="@android:color/white" />
